secondfile/objects/DHStatus_Connection_Level_Data__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data--DHStatus-Connection Level Data</description>
    <fields>
        <fullName>Access_Method__c</fullName>
        <label>Access Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressType__c</fullName>
        <label>Reference Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFNetwork_VLAN_ID_Bottom__c</fullName>
        <label>CFNetwork VLAN ID Bottom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFNetwork_VLAN_ID_Top__c</fullName>
        <label>CFNetwork VLAN ID Top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_VLAN_ID_Bottom__c</fullName>
        <label>Customer VLAN ID Bottom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_VLAN_ID_Top__c</fullName>
        <label>Customer VLAN ID Top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DHStatus_Access_Circuit_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data</description>
        <label>DHStatus-Access Circuit Data</label>
        <referenceTo>DHStatus_Access_Circuit_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Connection Level Data</relationshipLabel>
        <relationshipName>DHStatus_Connection_Level_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Connection_Level_Data__c</fullName>
        <label>DHStatus-Connection Level Data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DHStatus_Ethernet_Access_Circuit_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-Ethernet Access Circuit Data</label>
        <referenceTo>DHStatus_Ethernet_Access_Circuit_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Connection Level Data</relationshipLabel>
        <relationshipName>DHStatus_Connection_Level_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Detail_Premise__c</fullName>
        <formula>DHStatus_Ethernet_Access_Circuit_Data__r.DHStatus_Access_Circuit_Data__r.DHStatus_Logical_Provisioning__r.DHStatus_Update_IDH__r.DHStatus_Update_Deal_Hash_Details__r.Premise_Number__c</formula>
        <label>DHStatus Update Deal Hash Detail Premise</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Detials_ID__c</fullName>
        <formula>DHStatus_Ethernet_Access_Circuit_Data__r.DHStatus_Access_Circuit_Data__r.DHStatus_Logical_Provisioning__r.DHStatus_Update_IDH__r.DHStatus_Update_Deal_Hash_Details__r.Id</formula>
        <label>DHStatus Update Deal Hash Detials ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_IDH_Data_Type__c</fullName>
        <formula>DHStatus_Ethernet_Access_Circuit_Data__r.DHStatus_Access_Circuit_Data__r.DHStatus_Logical_Provisioning__r.DHStatus_Update_IDH__r.Data_Type__c</formula>
        <label>DHStatus Update IDH Data Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_IDH__c</fullName>
        <formula>DHStatus_Ethernet_Access_Circuit_Data__r.DHStatus_Access_Circuit_Data__r.DHStatus_Logical_Provisioning__r.DHStatus_Update_IDH__r.Id</formula>
        <label>DHStatus Update IDH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalConnectionID__c</fullName>
        <label>External Connection ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICOREvpnId__c</fullName>
        <label>ICOREvpnId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inter_Connect_Technology__c</fullName>
        <label>Inter Connect Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFNetwork_VLAN_ID_Bottom__c</fullName>
        <label>NFNetwork VLAN ID Bottom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NFNetwork_VLAN_ID_Top__c</fullName>
        <label>NFNetwork VLAN ID Top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_IP_Address_Data__c</fullName>
        <label>Reference IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_Number__c</fullName>
        <label>USO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_LAN_Address_Mask__c</fullName>
        <label>V4 LAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_LAN_Address_Type__c</fullName>
        <label>V4 LAN Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_LAN_IP_Address__c</fullName>
        <label>V4 LAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_LAN_Length__c</fullName>
        <label>V4 LAN Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_WAN_Address_Mask__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level Data-V4WANIPAddressData
-V4 WAN Address Mask</description>
        <label>V4 WAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_WAN_CER_IP_Address__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level Data-V4WANIPAddressData
-V4 WAN CER IP Address</description>
        <label>V4 WAN CER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_WAN_IP_Address__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level Data-V4WANIPAddressData
-V4 WAN IP Address</description>
        <label>V4 WAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_WAN_PER_IP_Address__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level Data-V4WANIPAddressData
-V4 WAN PER IP Address</description>
        <label>V4 WAN PER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6WAN_PER_IP_Address__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level Data-V6WANIPAddressData
-V6WAN PER IP Address</description>
        <label>V6WAN PER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_LAN_Address_Mask__c</fullName>
        <label>V6 LAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_LAN_Address_Type__c</fullName>
        <label>V6 LAN Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_LAN_IP_Address__c</fullName>
        <label>V6 LAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_LAN_Length__c</fullName>
        <label>V6 LAN Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_WAN_Address_Mask__c</fullName>
        <label>V6 WAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_WAN_CER_IP_Address__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level Data-V6WANIPAddressData
-V6 WAN CER IP Address</description>
        <label>V6 WAN CER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_WAN_IP_Address__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level Data-V6WANIPAddressData
- V6 WAN IP Address</description>
        <label>V6 WAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_WAN_Length__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level Data-V6WANIPAddressData
-V6 WAN Length</description>
        <label>V6 WAN Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>e2eVPNkey__c</fullName>
        <description>Custom object to store the Key value</description>
        <label>e2eVPNkey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>portID__c</fullName>
        <label>Port ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlanID__c</fullName>
        <label>Vlan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Connection Level Data</label>
    <nameField>
        <displayFormat>CLD-{00000}</displayFormat>
        <label>DHStatus-Connection Level Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Connection Level Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>